@@ -5,7 +5,7 @@
 \alias{CoordTern}
 \alias{coord_tern}
 \title{Ternary Coordinate System}
-\format{An object of class \code{CoordTern} (inherits from \code{CoordCartesian}, \code{Coord}, \code{ggproto}) of length 8.}
+\format{An object of class \code{CoordTern} (inherits from \code{CoordCartesian}, \code{Coord}, \code{ggproto}) of length 10.}
 \usage{
 coord_tern(Tlim = NULL, Llim = NULL, Rlim = NULL, expand = TRUE)
 
